# monte-carlo_monty-hall

./: README.md  configuration-not-wsl.nix  configuration.nix  main.py  pyproject.toml
src/: approx_pi.f90  approx_pi_multithread.f90  monte-carlo.c  monty-hall.c  plot_fortran_semilog_accuracy_vs_iterations.plt  plot_fortran_time_vs_iterations.plt
src/output/: fortran_out.txt  fortran_out_multithread.txt  output_monte_carlo_generated_points.txt  output_monte_carlo_val.txt  output_monty_hall_val.txt
